# datascitools

./: .gitignore  README.md  examples.ipynb  pyproject.toml
src/: models.py  spatial.py  utils.py
src/datascitools/: aescatboost.py  clusters.py  feature_selection.py  models.py  optimization.py  spatial.py
src/datascitools/advanced/cuttingedge/: PreDictX.py
src/datascitools/utils/: __init__.py  text.py
src/dstools/: clusters.py  models.py  spatial.py
src/dstools/utils/: __init__.py  text.py
tests/dstools/utils/: test_text_utils.py
