[build-system]
requires = ["setuptools>=65.0", "wheel>=0.37.1"]
build-backend = "setuptools.build_meta"

[project]
name = "datascitools"
version = "0.0.1"
authors = [
  { name="Andrew Patton", email="anpatt7@gmail.com" },
  { name="Magnus Nissel", email="magnus.nissel@gmail.com" },
  
]
description = "A collection of things we use. Some are fancy, many are simple."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
    "ngboost",
    "sklearn",
    "jenkspy",
    "lightgbm",
    "catboost",
    "BorutaShap",
    "dataclasses",
    "tqdm",
    "scipy"
]

[project.urls]
"Homepage" = "https://github.com/anpatton/datascitools"
"Bug Tracker" = "https://github.com/anpatton/datascitools/issues"

[project.optional-dependencies]
dev = [
  "black",
  "flake8"
]
tests = [
  "pytest",
  "pytest-mock",
  "pytest-sugar", 
  "pytest-clarity",
  "coverage"
]

[tool.black]
line-length = 119
target_version = ['py39']
